--- a/trending-py/Cargo.toml
+++ b/trending-py/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "trending-py"
-workspace.version = true
-workspace.edition = true
-workspace.license = true
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -10,4 +10,8 @@ name = "trending"
 crate-type = ["cdylib"]
 
 [dependencies]
-workspace.pyo3 = true
+trending.workspace = true
+
+pyo3.workspace = true
+reqwest.workspace = true
+snafu.workspace = true
