--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
-    "trending-rs",
-    "trending-py",
+  "trending-rs",
+  "trending-py",
+  "trending-js",
 ]
 resolver = "3"
 
@@ -13,13 +14,16 @@ license = "Apache-2.0"
 [workspace.dependencies]
 trending = { path = "./trending-rs" }
 
+js-sys = "0.3"
 pyo3 = "0.27.0"
-reqwest = { version = "0.12", features = ["json", "stream"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0", features = ["std"] }
+reqwest = "0.12"
+serde = "1.0"
+serde_json = "1.0"
 serde_repr = "0.1.20"
 snafu = "0.8.5"
-tokio = { version = "1.28", features = ["full"]}
+tokio = "1.28"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.56"
 
 [profile.release]
 codegen-units = 1
