--- a/trending-rs/Cargo.toml
+++ b/trending-rs/Cargo.toml
@@ -5,13 +5,13 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-reqwest.workspace = true
-serde.workspace = true
-serde_json.workspace = true
+reqwest = { workspace = true, features = ["json"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true, features = ["std"]}
 snafu.workspace = true
 
 [dev-dependencies]
-tokio.workspace = true
+tokio = { workspace = true, features = ["full"] }
 
 [features]
 default = ["blocking"]
