--- a/trending-py/pyproject.toml
+++ b/trending-py/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.10,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "trending-py"
+name = "trending"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
@@ -11,3 +11,14 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+authors = [{email = "dlzht@protonmail.com"}]
+maintainers = [{email = "dlzht@protonmail.com"}]
+keywords = ["api", "web", "trending"]
+
+[project.urls]
+homepage = "https://github.com/dlzht/trending"
+repository = "https://github.com/dlzht/trending"
+
+[tool.maturin]
+profile = "release"
+manifest-path = "Cargo.toml"
