--- a/trending-rs/Cargo.toml
+++ b/trending-rs/Cargo.toml
@@ -3,6 +3,11 @@ name = "trending"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+authors = ["dlzht@protonmail.com"]
+homepage = "https://github.com/dlzht/trending"
+repository = "https://github.com/dlzht/trending"
+categories = ["api-bindings", "web-programming"]
+keywords = ["api", "web", "trending"]
 
 [dependencies]
 reqwest = { workspace = true, features = ["json"] }
@@ -14,5 +19,4 @@ snafu.workspace = true
 tokio = { workspace = true, features = ["full"] }
 
 [features]
-default = ["blocking"]
 blocking = ["reqwest/blocking"]
