--- a/trending-py/Cargo.toml
+++ b/trending-py/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 [lib]
 name = "trending"
 crate-type = ["cdylib"]
+doc = false
 
 [dependencies]
 trending = { workspace = true, features = ["blocking"] }
