--- a/trending-py/Cargo.toml
+++ b/trending-py/Cargo.toml
@@ -3,6 +3,7 @@ name = "trending-py"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+readme.workspace  = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
