--- a/trending-rs/Cargo.toml
+++ b/trending-rs/Cargo.toml
@@ -3,6 +3,7 @@ name = "trending"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+readme.workspace  = true
 authors = ["dlzht@protonmail.com"]
 homepage = "https://github.com/dlzht/trending"
 repository = "https://github.com/dlzht/trending"
