--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 edition = "2024"
 license = "Apache-2.0"
 readme  = "README.md"
+description = "Trending is a library for retrieving trending information from media platforms"
 
 [workspace.dependencies]
 trending = { path = "./trending-rs" }
