--- a/trending-rs/Cargo.toml
+++ b/trending-rs/Cargo.toml
@@ -4,11 +4,15 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 readme.workspace  = true
+description.workspace = true
 authors = ["dlzht@protonmail.com"]
 homepage = "https://github.com/dlzht/trending"
 repository = "https://github.com/dlzht/trending"
 categories = ["api-bindings", "web-programming"]
 keywords = ["api", "web", "trending"]
+
+[lib]
+name = "trending"
 
 [dependencies]
 reqwest = { workspace = true, features = ["json"] }
